<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.activity.LogInActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textSize="25dp"
        android:textStyle="italic"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_slab"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email Address:"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Your Email Address"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Your password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />


    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN IN"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_slab"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No account yet? Create one"
        android:layout_gravity="center_horizontal"
        android:textSize="16dip"
        android:layout_marginTop="30dp"
        android:textStyle="italic"
        android:fontFamily="@font/roboto_slab"/>





</android.support.v7.widget.LinearLayoutCompat>
