<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="Sign Up"
        android:textSize="25dp"
        android:textStyle="italic"
        android:fontFamily="@font/roboto_slab"/>

    <!--  Name Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textCapWords"
            android:fontFamily="@font/roboto_slab"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto_slab"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto_slab"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Signup Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="Create Account"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_slab"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_slab"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:text="Accept the terms and conditions"
        android:id="@+id/acceptTerms"
        android:onClick="checkTerms"/>


    <TextView
        android:id="@+id/link_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="Already a member? Login"
        android:textSize="16dip"
        android:fontFamily="@font/roboto_slab"/>

</LinearLayout>
