...
            android:layout_height="wrap_content"
/>
    </RelativeLayout>


    <Button
        android:id="@+id/next"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
...
